# icdbDecode

./: .gitignore  .gitmodules  DemoFiles.md  FileStructure.md  README.md  icdb.ksy  icdb_consdef.ksy  icdb_seslog.ksy  icdb_uids.ksy
.github/workflows/: compile_and_deploy.yml
icdbDecode/: .gitignore  CMakeLists.txt  CMakeSettings.json  Makefile
icdbDecode/lib/zlib-1.3.1/: Makefile  gzlib.lo  uncompr.lo  zutil.lo
icdbDecode/src/: CMakeLists.txt  catlgatl.c  catlgatl.h  cdbblks.c  cdbblks.h  common.c  common.h  kicad.c  kicad.h  list.c  list.h  log.c  log.h  main.c  parser.c  parser.h  stringutil.c  stringutil.h  uid.c  uid.h  unpack.c  unpack.h
icdbDecode/src/cdbblks/: arcs.c  arcs.h  blkatl.c  blkatl.h  bus.c  bus.h  cdbblks.c  cdbblks.h  circles.c  circles.h  dxdatl.c  dxdatl.h  joint.c  joint.h  joints.c  joints.h  label.c  label.h  lines.c  lines.h  net.c  net.h  properties.c  properties.h  rectangles.c  rectangles.h  segment.c  segment.h  segments.c  segments.h  sheet.c  sheet.h  sheets.c  sheets.h  text.c  text.h  textdata.c  textdata.h
icdbDecode/src/cdbcatlg/: CMakeLists.txt  catlgatl.c  catlgatl.h  cdbcatlg.c  cdbcatlg.h  group.c  group.h  groups.c  groups.h  grpatl.c  grpatl.h  grpobj.c  grpobj.h  page.c  page.h  pages.c  pages.h
icdbDecode/src/cdbcmpcache/: cdbcmpcache.c  cdbcmpcache.h  cmpatl.c  cmpatl.h
icdbDecode/src/common/: arc.c  arc.h  circle.c  circle.h  dxdatl.c  dxdatl.h  label.c  label.h  line.c  line.h  property.c  property.h  rectangle.c  rectangle.h  text.c  text.h  textdata.c  textdata.h
icdbDecode/src/kicad/: CMakeLists.txt  kicad_schematic.c  kicad_schematic.h  kicad_shared.c  kicad_shared.h
tools/analyzer/: CMakeLists.txt  CMakeSettings.json
tools/analyzer/src/: main.c
tools/coder/: CMakeLists.txt
tools/coder/src/: main.c
